--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -90,8 +90,7 @@
   
   /* Enhanced Section Components - Fully Responsive */
   .section-padding {
-    @apply py-12 sm:py-16 md:py-20 lg:py-24 
-           px-4 sm:px-6 md:px-8 lg:px-12;
+    @apply pb-4 sm:pb-8 md:pb-10 lg:pb-12 px-4 sm:px-6 md:px-8 lg:px-12;
   }
   
   .container-custom {
